--- a/src/denied.html
+++ b/src/denied.html
@@ -3,17 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Access Denied - 766 Scouting</title>
-        
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <script src="js/form.min.js"></script>
-        <style>body {vertical-align: middle;}</style>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode vaMiddle">
         <h1 style="color: var(--cancelColor)">Access Denied!</h1>
     </body>
 </html>
