--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>CHARGED UP Scouting - 766 Scouting</title>
-        
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/homepage.min.css" type="text/css">
         <link rel="manifest" href="/app.webmanifest"/>
@@ -24,7 +22,7 @@
                 <span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline
             </div>
             <div>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
+                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
                 <div style="display: flex; flex-direction: column;">
                     <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">match scouting<br></a>
                     <a href="pit" class="gameflair1" style="order: 2; margin-bottom: 5%;">pit scouting<br></a>
