--- a/src/main.html
+++ b/src/main.html
@@ -3,26 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>Match Scouting - 766 Scouting</title>
-        
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/grid.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
-        <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
         <script>themeHandle()</script>
         <form action="/submit" target="_self" method="POST" name="mainForm" id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
+            <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
             <fieldset>
                 <label>Event Code</label><br>
