--- a/src/notes.html
+++ b/src/notes.html
@@ -2,38 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Team Notes - 766 Scouting</title>
-        
-        <meta name="language" content="English">
+        <title>Team Notes - 766 Scouting</title>    
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
-        <link rel="apple-touch-startup-image" href="public/launch.png">
-        <script src="js/form.min.js"></script>
         <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css" integrity="sha384-07UbSXbd8HpaOfxZsiO6Y8H1HTX6v0J96b5qP6PKSpYEuSZSYD4GFFHlLRjvjVrL" crossorigin="anonymous">
-        <style>
-            a,a:visited {
-                text-align: center;
-                text-decoration: none;
-                font-size: 6vh;
-                border-bottom: #fff;
-                color: inherit
-            }
-            body {
-                text-align: center;
-            }
-            .editorjs {
-                all: unset !important;
-            }
-        </style>
+        <script src="js/form.min.js"></script>
+        <style>a,a:visited{text-align:center;text-decoration:none;font-size:6vh;border-bottom:#fff;color:inherit}.editorjs{all:unset !important;}</style>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode centerText">
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <div class="maincontent">
