--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -3,27 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>Robot Images - 766 Scouting</title>
-        
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form.min.js"></script>
-        <style>img {width: 90vw; height: 90vw;}</style>
+        <style>img {width: 90vw;}</style>
     </head>
     <body class="dark-mode">
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4 style="color: red; display: none">/h4>
                     <h4>Image Database</h4><br>
                     <fieldset id="searchsect" style="display: block;">
