--- a/src/points.html
+++ b/src/points.html
@@ -3,47 +3,31 @@
     <head>
         <meta charset="utf-8">
         <title>Points - 766 Scouting</title>
-        
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
-        <link rel="apple-touch-startup-image" href="public/launch.png">
-        <style>
-            body {
-                text-align: center;
-            }
-            a,a:visited {
-                text-align: center;
-                text-decoration: none;
-                font-size: 6vh;
-            }
-            a:hover,a:active {
-                color: var(--textColor);
-            }
-        </style>
+        <style>a,a:visited {text-align:center;text-decoration:none;font-size:6vh;}a:hover,a:active{color:var(--textColor);}</style>
         <script src="js/form.min.js"></script>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode centerText">
         <script>themeHandle()</script>
         <div class="container">
             <div>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <div style="display: flex; flex-direction: column;">
-                    <a href="spin" class="gameflair1" style="margin-bottom: 5%;">spin thing</a><br>
-                    <a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">blackjack*</a><br>
+                    <a href="spin" class="gameflair1 bigLink">spin thing</a><br>
+                    <a href="blackjack" class="gameflair1 bigLink">blackjack</a><br>
                 </div>
                 <br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 0.1rem;" onclick="goToHome()">Back</button><br><br>
-                <small style="text-align: center;"><a href="pointRecords" style="all: unset; color: var(--gameFlairColor);">points records</a></small>
+                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button><br><br>
+                <small style="text-align: center;"><a href="pointRecords" class="actLink">points records</a></small>
             </div>
         </div>
-        <script>function goToHome() {window.location.href = "/";}</script>
+        <script>function goToHome(){window.location.href="/"}</script>
     </body>
 </html>
