--- a/src/submitted.html
+++ b/src/submitted.html
@@ -3,21 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Form Submitted - 766 Scouting</title>
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
         <meta http-equiv="refresh" content="1;url=/"/>
         <script src="js/form.min.js"></script>
-        <style>body {vertical-align: middle;}</style>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode vaMiddle">
         <script>themeHandle()</script>
         <div>
             <h1 style="color: #FFB600">Submitted!</h1><br>
