--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Blackjack - 766 Scouting</title>
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <link rel="manifest" href="/app.webmanifest" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
@@ -33,25 +32,11 @@
         </div>
         <div class="bjContainer" id="game" style="display: none;">
             <div class="blackjack">
-                <img src="assets/blank.png" class="cardImg dealer1">
-                <img src="assets/blank.png" class="cardImg dealer2">
-                <img src="assets/blank.png" class="cardImg dealer3">
-                <img src="assets/blank.png" class="cardImg dealer4">
-                <img src="assets/blank.png" class="cardImg dealer5">
-                <img src="assets/blank.png" class="cardImg dealer6">
-                <img src="assets/blank.png" class="cardImg dealer7">
-                <img src="assets/blank.png" class="cardImg player1">
-                <img src="assets/blank.png" class="cardImg player2">
-                <img src="assets/blank.png" class="cardImg player3">
-                <img src="assets/blank.png" class="cardImg player4">
-                <img src="assets/blank.png" class="cardImg player5">
-                <img src="assets/blank.png" class="cardImg player6">
-                <img src="assets/blank.png" class="cardImg player7">
-                <img src="assets/deal.png" class="bjBtn deal noDeal">
-                <img src="assets/hit.png" class="bjBtn hit noDeal">
-                <img src="assets/stand.png" class="bjBtn stand noDeal">
+                <img src="assets/blank.png" class="cardImg dealer1"><img src="assets/blank.png" class="cardImg dealer2"><img src="assets/blank.png" class="cardImg dealer3"><img src="assets/blank.png" class="cardImg dealer4"><img src="assets/blank.png" class="cardImg dealer5"><img src="assets/blank.png" class="cardImg dealer6"><img src="assets/blank.png" class="cardImg dealer7">
+                <img src="assets/blank.png" class="cardImg player1"><img src="assets/blank.png" class="cardImg player2"><img src="assets/blank.png" class="cardImg player3"><img src="assets/blank.png" class="cardImg player4"><img src="assets/blank.png" class="cardImg player5"><img src="assets/blank.png" class="cardImg player6"><img src="assets/blank.png" class="cardImg player7"><img src="assets/deal.png" class="bjBtn deal noDeal">
+                <img src="assets/hit.png" class="bjBtn hit noDeal"><img src="assets/stand.png" class="bjBtn stand noDeal">
             </div>
         </div>
-        <script src="assets/blackjack.js" type="text/javascript"></script>
+        <script src="assets/blackjack.min.js" type="text/javascript"></script>
     </body>
 </html>
