--- a/src/browse.html
+++ b/src/browse.html
@@ -4,30 +4,28 @@
         <meta charset="utf-8">
         <title>Browse Data - 766 Scouting</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="apple-touch-startup-image" href="public/launch.png">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <link rel="manifest" href="/app.webmanifest" />
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/table.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode" onload="searchOnLoad()">
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <fieldset id="searchFset">
                     <select id="type">
                         <option value="team" selected>Team</option>
                         <option value="match">Match</option>
-                    </select>
+                    </select><br>
                     <input type="tel" id="number" required><br>
                     <fieldset><br>
                         <label>Event Code: </label><br>
@@ -49,7 +47,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4><br>
                 <h3 id="teamAtEvent"></h3>
                 <div style="overflow-x: auto; width: 95vw;">
