--- a/src/matches.html
+++ b/src/matches.html
@@ -3,31 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Matches - 766 Scouting</title>
-        
-        <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
-        <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form.min.js"></script>
-        <style>
-            a,a:visited {
-                text-align: center;
-                text-decoration: none;
-                font-size: 6vh;
-                border-bottom: #fff;
-                color: inherit
-            }
-            body {
-                text-align: center;
-            }
-        </style>
+        <style>a,a:visited{text-align:center;text-decoration:none;font-size:6vh;border-bottom:#fff;color:inherit}body{text-align:center;}</style>
     </head>
     <body class="dark-mode">
         <script>themeHandle()</script>
