--- a/src/scouts.html
+++ b/src/scouts.html
@@ -3,24 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Scouts - 766 Scouting</title>
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <link rel="manifest" href="/app.webmanifest" />
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <link rel="stylesheet" href="css/table.min.css" type="text/css">
-        <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode" onload="getTeamRanks()">
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <fieldset>
                     <fieldset>
                         <h3 id="eventCodeDisplay"></h3>
