--- a/src/spin.html
+++ b/src/spin.html
@@ -3,25 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Spinner - 766 Scouting</title>
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
-        <link rel="manifest" href="/app.webmanifest"/>
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <link rel="stylesheet" href="assets/spin.min.css" type="text/css">
-        <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
-        <style>
-            img {
-                image-rendering: pixelated;
-                image-rendering: -moz-crisp-edges;
-                image-rendering: crisp-edges;
-            }
-        </style>
     </head>
     <body class="dark-mode">
         <script>themeHandle()</script>
