--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -24,7 +24,7 @@
                     <fieldset>
                         <h3 id="eventCodeDisplay">Point Transactions</h3>
                         <table>
-                            <tr id="preInsert"><th>Description</th><th>Amount</th></tr>
+                            <tr id="preInsert"><th>Description</th><th>Amount</th><th>Timestamp</th></tr>
                         </table>
                     </fieldset>
                     <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
