--- a/src/main.html
+++ b/src/main.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/grid.min.css" type="text/css">
         <script src="js/form.min.js"></script>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode" onload="checkLogin()">
         <script>themeHandle()</script>
         <form action="/submit" target="_self" method="POST" name="mainForm" id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
