--- a/src/main.html
+++ b/src/main.html
@@ -138,7 +138,7 @@
             <br>
             <p style="text-align:center">
                 <button type="submit" class="uiButton actionButton" id="submitButton">Submit</button><br>
-                <button type="button" class="uiButton cancelButton" onclick="goToHome()">Back</button><br><br>
+                <button type="button" class="uiButton cancelButton" onclick="window.location.href = '/'">Back</button><br><br>
             </p>
         </form>
         <script src="js/main_form_client.min.js" type="text/javascript"></script>
