--- a/src/pit.html
+++ b/src/pit.html
@@ -89,7 +89,7 @@
             <br>
             <p style="text-align:center">
                 <button type="submit" class="uiButton actionButton">Submit</button><br>
-                <button type="button" class="uiButton cancelButton" onclick="goToHome()">Back</button>
+                <button type="button" class="uiButton cancelButton" onclick="window.location.href = '/'">Back</button>
             </p>
         </form>
         <script src="js/pitscouting_client.min.js" type="text/javascript"></script>
