--- a/src/settings.html
+++ b/src/settings.html
@@ -19,10 +19,10 @@
             <div class="dummy">
                 <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h2>Settings</h2><br>
-                <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()"><p>Switch Theme</p></button><br><br>
-                <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'"><p>Log Out</p></button><br><br><br>
-                <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'"><p>Back</p></button><br><br><br><br>
-                <button style="background-color: rgba(0,0,0,0); border: none; color: #f00; padding: 0px; width: 75%;" onclick="window.location.href='clearCookies'"><p>Reset Cookies</p></button>
+                <button style="background-color: transparent; border: 1px solid var(--textColor); color: var(--textColor)gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()"><p>Switch Theme</p></button><br><br>
+                <button style="background-color: transparent; border: 1px solid var(--cancelColor); color: var(--cancelColor); border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'"><p>Log Out</p></button>
+                <button style="background-color: transparent; border: none; color: var(--cancelColor); padding: 0px; width: 75%;" onclick="window.location.href='clearCookies'"><p>Reset Cookies</p></button><br><br><br>
+                <button style="background-color: transparent; border: 1px solid var(--textColor); color: var(--textColor); border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'"><p>Back</p></button>
             </div>
         </div>
         <script src="js/client_settings.min.js" type="text/javascript"></script>
