--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <script src="js/homepage_client.js" type="text/javascript"></script>
+        <script src="js/homepage_client.min.js" type="text/javascript"></script>
         <script src="js/network_client.min.js" type="text/javascript"></script>
     </body>
 </html>
