--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -40,6 +40,6 @@
                 <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </div>
         </div>
-        <!--<script src="js/manageScouts/manageScouts.min.js" type="text/javascript"></script>-->
+        <script src="js/manageScouts/manageScouts.min.js" type="text/javascript"></script>
     </body>
 </html>
