--- a/src/scouts.html
+++ b/src/scouts.html
@@ -35,6 +35,6 @@
                 </fieldset>
             </div>
         </div>
-        <script src="js/scouts_client.min.js" type="text/javascript"></script>
+        <script src="js/scouts/scouts.min.js" type="text/javascript"></script>
     </body>
 </html>
