--- a/src/main.html
+++ b/src/main.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/grid.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="checkLogin()">
+    <body class="dark-mode" onload="checkLogin()" style="width: 99vw;">
         <script>themeHandle()</script>
         <form id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
