separate some manage functionality

--- a/src/manage.html
+++ b/src/manage.html
@@ -24,7 +24,9 @@
                     <button type="button" class="uiButton actionButton" onclick="getData()" id="viewData">View Data</button><br>
                     <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
-                <small style="text-align: center;">manage scouts <a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">here</a></small><br>
+                <small style="text-align: center;"><a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">manage scouts</a></small><br>
+                <small style="text-align: center;"><a href="manageScoutDetails" style="all: unset; color: var(--gameFlairColor);">manage scout details</a></small><br>
+                <small style="text-align: center;"><a href="manageTeams" style="all: unset; color: var(--gameFlairColor);">manage teams</a></small><br>
             </form>
             <br><br>
         </div>
