--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Manage Teams - 766 Scouting</title>
+        <title>Manage Scouts - 766 Scouting</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -15,20 +15,20 @@
         <link rel="stylesheet" href="css/table.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="getTeamData()">
+    <body class="dark-mode" onload="getData()">
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <div class="dummy">
                 <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Manage Teams</h4>
+                <h4>Manage Scouts</h4>
                 <div style="overflow-x: auto; width: 95vw;">
                     <table>
-                        <tr id="teamsTableHead"><th>Team</th><th>Code</th></tr>
+                        <tr id="tableHeader"><th>Scout</th><th>Points</th><th></th></tr>
                     </table>
                 </div>
                 <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </div>
         </div>
-        <script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>
+        <script src="js/manageScouts/manageScouts.min.js" type="text/javascript"></script>
     </body>
 </html>
