--- a/src/main.html
+++ b/src/main.html
@@ -16,7 +16,7 @@
     </head>
     <body class="dark-mode" onload="checkLogin()" style="width: 99vw;">
         <script>themeHandle()</script>
-        <form id="mainFormHTML">
+        <form id="mainFormHTML" style="display: none;">
             <input type="text" value="main" name="formType" hidden>
             <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
@@ -141,6 +141,12 @@
                 <button type="button" class="uiButton cancelButton" onclick="window.location.href = '/'">Back</button><br><br>
             </p>
         </form>
-        <script src="js/main_form/main_form.min.js" type="text/javascript"></script>
+        <div class="dummy" id="submitUi" style="display: none;">
+            <h1 style="padding-top: 25vh" id="submitText_d">Submitting...</h1>
+            <progress style="min-width: 75vw;" id="submitProgress_d"></progress>
+            <br>
+            <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="reSubmitButton" style="display: none;">retry</button><br>
+        </div>
+        <!--<script src="js/main_form/main_form.min.js" type="text/javascript"></script>-->
     </body>
 </html>
