--- a/src/main.html
+++ b/src/main.html
@@ -16,7 +16,7 @@
     </head>
     <body class="dark-mode" onload="checkLogin()" style="width: 99vw;">
         <script>themeHandle()</script>
-        <form id="mainFormHTML" style="display: none;">
+        <form id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
             <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
@@ -147,6 +147,6 @@
             <br>
             <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="reSubmitButton" style="display: none;">retry</button><br>
         </div>
-        <!--<script src="js/main_form/main_form.min.js" type="text/javascript"></script>-->
+        <script src="js/main_form/main_form.min.js" type="text/javascript"></script>
     </body>
 </html>
