--- a/src/main.html
+++ b/src/main.html
@@ -137,7 +137,7 @@
             </fieldset>
             <br>
             <p style="text-align:center">
-                <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="submitButton">Submit</button><br>
+                <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="submitButton" disabled="disabled">Submit</button><br>
                 <button type="button" class="uiButton cancelButton" onclick="window.location.href = '/'">Back</button><br><br>
             </p>
         </form>
