--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -12,7 +12,7 @@
         <meta name="apple-mobile-web-app-title" content="Scouting">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <link rel="stylesheet" href="css/table.css" type="text/css">
+        <link rel="stylesheet" href="css/table.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
     <body class="dark-mode" onload="getData()">
