--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -12,23 +12,30 @@
         <meta name="apple-mobile-web-app-title" content="Scouting">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <link rel="stylesheet" href="css/table.css" type="text/css">
+        <link rel="stylesheet" href="css/table.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
     <body class="dark-mode" onload="getTeamData()">
         <script>themeHandle()</script>
-        <div class="container" style="display: flex;">
+        <div class="container">
             <div class="dummy">
                 <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Manage Teams</h4>
-                <div style="overflow-x: auto; width: 95vw;">
+                <div style="overflow-x: auto; width: 95vw;" id="mainsect">
+                    <h2>Manage Teams</h2>
                     <table>
                         <tr id="teamsTableHead"><th>Team</th><th>Code</th></tr>
-                    </table>
+                    </table><br><br>
+                    <button type="button" class="uiButton actionButton" onclick="createTeamKey()" id="newTeamKey_btn">add team</button><br>
                 </div>
-                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                <div id="createKey" style="display: none;">
+                    <h2>Create Team Key</h2><br>
+                    <label for="newTeamKey_key">Numeric Key</label><br><input type="tel" id="newTeamKey_key" class="credInput"><br><br><br>
+                    <label for="newTeamKey_team">Team Number</label><br><input type="tel" id="newTeamKey_team" class="credInput"><br><br>
+                    <button type="button" class="uiButton actionButton" onclick="createTeamKey()" id="newTeamKey_btn">create</button><br>
+                </div>
+                <button type="button" class="uiButton returnButton" onclick="goToHome()">back</button>
             </div>
         </div>
-        <script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>
+        <!--<script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>-->
     </body>
 </html>
