--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -36,6 +36,6 @@
                 <button type="button" class="uiButton returnButton" onclick="goToHome()">back</button>
             </div>
         </div>
-        <!--<script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>-->
+        <script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>
     </body>
 </html>
