fix functin called

--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -25,7 +25,7 @@
                     <table>
                         <tr id="teamsTableHead"><th>Team</th><th>Code</th></tr>
                     </table><br><br>
-                    <button type="button" class="uiButton actionButton" onclick="createTeamKey()" id="newTeamKey_btn">add team</button><br>
+                    <button type="button" class="uiButton actionButton" onclick="setupTeamKeyCreate()" id="newTeamKey_btn">add team</button><br>
                 </div>
                 <div id="createKey" style="display: none;">
                     <h2>Create Team Key</h2><br>
