--- a/src/detail.html
+++ b/src/detail.html
@@ -27,7 +27,7 @@
                         <h5>Match Number: <span id="resultMatchNum"></span> | Event: <span id="resultEventCode"></span></h5>
                         <p style="text-align: left" id="resultText"></p>
                     </fieldset><br>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
             </div>
         </div>
