--- a/src/main.html
+++ b/src/main.html
@@ -137,8 +137,8 @@
             </fieldset>
             <br>
             <p style="text-align:center">
-                <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="submitButton" disabled="disabled">Submit</button><br>
-                <button type="button" class="uiButton cancelButton" onclick="window.location.href = '/'">Back</button><br><br>
+                <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="submitButton" disabled="disabled">Submit</button><br><br>
+                <button type="button" class="uiButton cancelButton" onclick="window.location.href='/'">Back</button><br><br>
             </p>
         </form>
         <div class="dummy" id="submitUi" style="display: none;">
