--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -33,7 +33,7 @@
                     <label for="newTeamKey_team">Team Number</label><br><input type="tel" id="newTeamKey_team" class="credInput"><br><br>
                     <button type="button" class="uiButton actionButton" onclick="createTeamKey()" id="newTeamKey_btn">create</button><br>
                 </div>
-                <button type="button" class="uiButton returnButton" onclick="goToHome()">back</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/manage'">back</button>
             </div>
         </div>
         <script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>
