--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -28,7 +28,7 @@
                         </table>
                     </fieldset>
                     <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
                 </fieldset>
             </div>
         </div>
