--- a/src/teams.html
+++ b/src/teams.html
@@ -64,7 +64,7 @@
                             </tr>
                         </table>
                     </fieldset>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/browse'">Back</button>
                 </fieldset>
             </div>
         </div>
