--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -27,7 +27,7 @@
                         <option value="assets/gruvcards/" disabled>Gruvbox Cards</option>
                     </optgroup>
                 </select><br><br>
-                <button class="uiButton actionButton" onclick="startBlackjack()">Play</button><br><button  class="uiButton returnButton" onclick="goToHome()">Back</button>
+                <button class="uiButton actionButton" onclick="startBlackjack()">Play</button><br><button  class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
             </div>
         </div>
         <div class="bjContainer" id="game" style="display: none;">
