--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -26,7 +26,7 @@
                         <tr id="tableHeader"><th>Scout</th><th>Points</th><th></th></tr>
                     </table>
                 </div>
-                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/manage'">Back</button>
             </div>
         </div>
         <script src="js/manageScouts/manageScouts.min.js" type="text/javascript"></script>
