--- a/src/manageTeam.html
+++ b/src/manageTeam.html
@@ -26,7 +26,7 @@
                         <tr id="tableHeader"><th>Scout</th><th></th></tr>
                     </table>
                 </div>
-                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
             </div>
         </div>
         <script src="js/manageTeam/manageTeam.min.js" type="text/javascript"></script>
