--- a/src/matches.html
+++ b/src/matches.html
@@ -36,7 +36,7 @@
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Matches<br><span class="gametitle">CHARGED UP</span></h1><br><br>
-                <button class="uiButton actionButton" onclick='goToHome()'>Back</button><br>
+                <button class="uiButton actionButton" onclick="window.location.href='/'">Back</button><br>
             </div>
         </div>
         <script src="js/matches/matches.min.js" type="text/javascript"></script>
