--- a/src/scouts.html
+++ b/src/scouts.html
@@ -31,7 +31,7 @@
                         </table>
                     </fieldset>
                     <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
             </div>
         </div>
