--- a/src/browse.html
+++ b/src/browse.html
@@ -37,7 +37,7 @@
                         </select>
                     </fieldset>
                     <button type="button" class="uiButton actionButton" onclick="callSearch()" id="searchBtn">Search</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
                 <small style="text-align: center;"><a href="teams" style="all: unset; color: var(--gameFlairColor);">teams by performance score</a></small><br>
             </form>
