--- a/src/matches.html
+++ b/src/matches.html
@@ -29,7 +29,7 @@
                     </select><br><br>
                     <label>Include All Matches: </label><input id="allmatch" type="checkbox"><br>
                     <button type="button" class="uiButton actionButton" id="viewMatchButton" onclick="getMatches()">View</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()" type="button">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'" type="button">Back</button>
                 </fieldset>
             </div>
         </div>
