--- a/src/manage.html
+++ b/src/manage.html
@@ -22,7 +22,7 @@
                 <h4>Manage Data</h4><br>
                 <fieldset>
                     <button type="button" class="uiButton actionButton" onclick="getData()" id="viewData">View Data</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
                 <small style="text-align: center;"><a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">manage scouts</a></small><br>
                 <small style="text-align: center;"><a href="manageTeams" style="all: unset; color: var(--gameFlairColor);">manage teams</a></small><br>
