--- a/src/main.html
+++ b/src/main.html
@@ -21,7 +21,7 @@
             <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
             <fieldset>
-                <label>Event Code</label><br>
+                <label>Event Code<span id="badEvent" style="color: red; display: none;">&emsp;no event match data found!</span><br></label>
                 <select name="event" id="eventCode">
                     <option value="CADA">CADA - Sacramento Regional</option>
                     <option value="CASJ">CASJ - Silicon Valley Regional</option>
@@ -30,8 +30,8 @@
                 </select>
             </fieldset>
             <fieldset>
-                <label>Match Number<br></label>
-                <input type="tel" name="match" class="smallerInput" required>
+                <label>Match Number<span id="badMatchNum" style="color: red; display: none;"></span><br></label>
+                <input type="tel" name="match" class="smallerInput" id="matchNumberInput" required>
                 <select name="level" class="lowerSelect">
                     <option value="Practice">Practice</option>
                     <option value="Qualification" selected>Qual</option>
@@ -40,8 +40,19 @@
                 </select>
             </fieldset>
             <fieldset>
-                <label>Team Number <span id="invalidTeamInput" style="color: red; display: none;">Not in comp!</span><br></label>
-                <input type="tel" name="team" id="validateTeamInput" required>
+                <label>Team Number<br></label>
+                <select name="team" id="eventCode" style="min-width: 250px;">
+                    <optgroup label="Blue Alliance">
+                        <option value="" class="teamNumOption"></option>
+                        <option value="" class="teamNumOption"></option>
+                        <option value="" class="teamNumOption"></option>
+                    </optgroup>
+                    <optgroup label="Red Alliance">
+                        <option value="" class="teamNumOption"></option>
+                        <option value="" class="teamNumOption"></option>
+                        <option value="" class="teamNumOption"></option>
+                    </optgroup> 
+                </select>
             </fieldset><br>
             <h2 class="gameflair1">Match Scouting</h2>
             <p id="landscapeReminder" style="display: none; color: red;">Consider turning your device for the grid</p>
