fix main client script

--- a/src/main.html
+++ b/src/main.html
@@ -21,7 +21,7 @@
             <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
             <fieldset>
-                <label>Event Code<span id="badEvent" style="color: red; display: none;">&emsp;no event match data found!</span><br></label>
+                <label>Event Code<span id="badEvent" style="color: red; display: none;"></span><br></label>
                 <select name="event" id="eventCode">
                     <option value="CADA">CADA - Sacramento Regional</option>
                     <option value="CASJ">CASJ - Silicon Valley Regional</option>
