--- a/src/main.html
+++ b/src/main.html
@@ -33,10 +33,10 @@
                 <label>Match Number<span id="badMatchNum" style="color: red; display: none;"></span><br></label>
                 <input type="tel" name="match" class="smallerInput" id="matchNumberInput" required>
                 <select name="level" class="lowerSelect">
-                    <option value="Practice">Practice</option>
+                    <option value="Practice" disabled>Practice</option>
                     <option value="Qualification" selected>Qual</option>
-                    <option value="Upper">Upper</option>
-                    <option value="Lower">Lower</option>
+                    <option value="Upper" disabled>Upper</option>
+                    <option value="Lower" disabled>Lower</option>
                 </select>
             </fieldset>
             <fieldset>
