--- a/src/charts.html
+++ b/src/charts.html
@@ -60,6 +60,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/chart.js" integrity="sha384-e6nUZLBkQ86NJ6TVVKAeSaK8jWa3NhkYWZFomE39AvDbQWeie9PlQqM3pmYW5d1g" crossorigin="anonymous"></script>
+        <script>Chart.defaults.color = "#fff";</script>
         <script src="js/charts/charts.min.js" type="text/javascript"></script>
     </body>
 </html>
